--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ numcodecs
 numpy
 matplotlib
 scipy
-git+https://github.com/CI-CMG/pyEcholab.git@RHT-EK80#egg=pyEcholab
+git+https://github.com/iambaim/pyEcholab.git@RHT-EK80#egg=pyEcholab
