--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,15 @@ zarr
 netCDF4
 dask[array]
 dask[delayed]
-xarray
+dask[dataframe]
+pandas
+pyarrow
+# Use xarray devel to avoid lossy datetime64 precision
+# use 0.17,0 when it's released
+git+https://github.com/pydata/xarray.git#egg=xarray
 numcodecs
 numpy
 matplotlib
 scipy
 git+https://github.com/iambaim/pyEcholab.git@fixes_for_crimac#egg=pyEcholab
+git+https://github.com/CRIMAC-WP4-Machine-learning/CRIMAC-annotationtools.git@new_fixes#egg=annotationtools
