--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,4 @@ numpy
 matplotlib
 scipy
 git+https://github.com/iambaim/pyEcholab.git@fixes_for_crimac#egg=pyEcholab
-git+https://github.com/CRIMAC-WP4-Machine-learning/CRIMAC-annotationtools.git@new_fixes#egg=annotationtools
+git+https://github.com/CRIMAC-WP4-Machine-learning/CRIMAC-annotationtools.git#egg=annotationtools
