--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,13 @@ zarr
 netCDF4
 dask[array]
 dask[delayed]
+dask[distributed]
 dask[dataframe]
 pandas
 pyarrow
 xarray>=0.17.0
-bottleneck
-numbagg
 numcodecs
 numpy
 matplotlib
-scipy
 git+https://github.com/iambaim/pyEcholab.git@fixes_for_crimac#egg=pyEcholab
 git+https://github.com/CRIMAC-WP4-Machine-learning/CRIMAC-annotationtools.git#egg=annotationtools
