First attempt at fixing the RAW4 datagram reading. Assuming RAW4 == RAW3: https://github.com/iambaim/pyEcholab/commit/98d4d9880db55260851dace48f8e83f2aa27785f . Should fix https://github.com/CRIMAC-WP4-Machine-learning/CRIMAC-preprocessing/issues/21 .

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,5 @@ numcodecs
 numpy
 scipy
 matplotlib
-git+https://github.com/iambaim/pyEcholab.git@fixes_for_crimac#egg=pyEcholab
+git+https://github.com/iambaim/pyEcholab.git@fixes_for_crimac_raw4#egg=pyEcholab
 git+https://github.com/CRIMAC-WP4-Machine-learning/CRIMAC-annotationtools.git#egg=annotationtools
