--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,6 @@ numcodecs
 numpy
 scipy
 matplotlib
+psutil
 git+https://github.com/iambaim/pyEcholab.git@fixes_for_crimac#egg=pyEcholab
 git+https://github.com/CRIMAC-WP4-Machine-learning/CRIMAC-annotationtools.git#egg=annotationtools
