--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,23 @@ scipy
 matplotlib
 psutil
 git+https://github.com/CI-CMG/pyEcholab.git@RHT-EK80#egg=pyEcholab
+lxml
+pytz
+future
+zarr
+netCDF4
+dask[array]
+dask[delayed]
+dask[distributed]
+dask[dataframe]
+pandas
+pyarrow
+xarray>=0.17.0
+rechunker
+numcodecs
+numpy
+scipy
+matplotlib
+psutil
+git+https://github.com/CI-CMG/pyEcholab.git@RHT-EK80#egg=pyEcholab
 git+https://github.com/tomaszfurmanek/CRIMAC-annotationtools.git#egg=annotationtools
