--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 xarray==0.20.0
 numpy==1.18.0
 zarr==2.8.1
-lxml
-pytz
-future
-netCDF4
+pandas==1.5.3
+rechunker
 dask[array]
 dask[delayed]
 dask[distributed]
 dask[dataframe]
-pandas
-pyarrow
-rechunker
+lxml
+pytz
+future
+netCDF4
+pyarrow 
 numcodecs
 scipy
 matplotlib
